--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <div class="button">3</div>
                             </div>
                             <div class="calc-button-row">
-                                <div class="button">&lt;</div>
+                                <div id="remove-itme" class="button">&lt;</div>
                                 <div class="button">0</div>
                                 <div class="button">C</div>
                             </div>
